LOGCXX-211: Crash(Segmentation Fault) in DailyRollingFileAppender when file change